--- a/settings.json
+++ b/settings.json
@@ -1,4 +1,5 @@
 {
+	// GLOBAL
 	"update.mode": "manual",
 
 	"workbench.colorCustomizations": {
@@ -138,7 +139,8 @@
 	"terminal.integrated.cursorStyle": "line",
 	"terminal.integrated.shellIntegration.decorationsEnabled": "never",
 
-	// formatting
+	// FORMATTING
+	// editor
 	"editor.formatOnSave": false,
 	"editor.formatOnPaste": true,
 	"editor.formatOnType": true,
@@ -146,30 +148,7 @@
 	"editor.insertSpaces": false,
 	"editor.tabSize": 4,
 
-	// YAML
-	"[yaml]": { "editor.formatOnSave": false },
-	"editor.defaultFormatter": "esbenp.prettier-vscode",
-	"[lua]": {
-		"editor.defaultFormatter": "JohnnyMorganz.stylua"
-	},
-	"[shellscript]": {
-		"editor.defaultFormatter": "mads-hartmann.bash-ide-vscode"
-	},
-
-	// python
-	"python.analysis.autoIndent": false,
-	"[python]": {
-		"editor.tabSize": 4,
-		"editor.insertSpaces": false,
-		"editor.defaultFormatter": "charliermarsh.ruff",
-		"editor.detectIndentation": false,
-		"editor.formatOnType": false
-	},
-
-	// markdown
-	"[markdown]": { "editor.detectIndentation": true, "editor.formatOnSave": false, "editor.insertSpaces": true, "editor.tabSize": 2 },
-
-	// prettier
+	// prittier
 	"prettier.printWidth": 160,
 	"prettier.semi": false,
 	"prettier.useTabs": true,
@@ -180,78 +159,23 @@
 	// ruff
 	"ruff.lineLength": 120,
 
-	// JS & TS & html
-	// "html.completion.attributeStyLuaValue": "singlequotes",
+	// JSON & YAML
+	"[json]": { "editor.defaultFormatter": "esbenp.prettier-vscode" },
+	"[jsonc]": { "editor.defaultFormatter": "esbenp.prettier-vscode" },
+	"[yaml]": {},
+
+	// JS & TS
+	"[javascript]": { "editor.defaultFormatter": "esbenp.prettier-vscode" },
+	"[typescript]": { "editor.defaultFormatter": "esbenp.prettier-vscode" },
+
 	"javascript.updateImportsOnFileMove.enabled": "always",
 	"javascript.format.semicolons": "remove",
-	"typescript.format.semicolons": "remove",
 	"javascript.preferences.quoteStyle": "single",
+	"typescript.format.semicolons": "remove",
 	"typescript.preferences.quoteStyle": "single",
 
-	// debug
-	"debug.focusWindowOnBreak": false,
-	"debug.showInlineBreakpointCandidates": false,
-	"debug.showBreakpointsInOverviewRuler": false,
-	"security.workspace.trust.untrustedFiles": "open",
-
-	// git
-	"scm.showActionButton": false,
-	// "scm.defaultViewMode": "list",
-	// "git.decorations.enabled": true,
-	"git.decorations.enabled": true,
-	"git.timeline.showAuthor": false,
-	"git.timeline.showUncommitted": true,
-
-	"git.showCommitInput": false,
-	"git.useEditorAsCommitInput": false,
-	"git.suggestSmartCommit": false,
-	"partialDiff.commandsOnContextMenu": {
-		"markSection1": false,
-		"markSection2AndTakeDiff": false
-	},
-
-	"git.openRepositoryInParentFolders": "never",
-
-	// markdown
-	"markdown-preview-enhanced.mermaidTheme": "dark",
-	"markdown-preview-enhanced.breakOnSingleNewLine": false,
-	"markdown-preview-enhanced.scrollSync": false,
-	"markdown-preview-enhanced.codeBlockTheme": "github-dark.css",
-	"markdown-preview-enhanced.enablePreviewZenMode": true,
-	"markdown-preview-enhanced.previewTheme": "none.css",
-	"markdown.extension.print.theme": "dark",
-	"projectManager.sortList": "Recent",
-
-	// markdown linter
-	"markdownlint.run": "onSave",
-	"markdownlint.enable": false,
-	"markdownlint.config": {
-		"MD012": { "maximum": 2 },
-		"MD018": false,
-		"MD022": false,
-		"MD032": false,
-		"MD047": false
-	},
-
-	// quick fix (working?)
-	"editor.codeActionsOnSave": {},
-	"errorLens.messageEnabled": true,
-	"explorer.fileNesting.patterns": {
-		"*.ts": "${capture}.js",
-		"*.js": "${capture}.js.map, ${capture}.min.js, ${capture}.d.ts",
-		"*.jsx": "${capture}.js",
-		"*.tsx": "${capture}.ts",
-		"tsconfig.json": "tsconfig.*.json",
-		"package.json": "package-lock.json, yarn.lock, pnpm-lock.yaml, bun.lockb",
-		"*.sqlite": "${capture}.${extname}-*",
-		"*.db": "${capture}.${extname}-*",
-		"*.sqlite3": "${capture}.${extname}-*",
-		"*.db3": "${capture}.${extname}-*",
-		"*.sdb": "${capture}.${extname}-*",
-		"*.s3db": "${capture}.${extname}-*"
-	},
-
-	// lua
+	// Lua
+	"[lua]": { "editor.defaultFormatter": "JohnnyMorganz.stylua" },
 	"Lua.diagnostics.enable": false,
 	"Lua.completion.autoRequire": false,
 	"Lua.completion.enable": false,
@@ -278,6 +202,44 @@
 	"Lua.completion.showWord": "Disable",
 	"Lua.hint.arrayIndex": "Disable",
 	"Lua.hint.paramName": "Disable",
+
+	// shell
+	"[shellscript]": { "editor.defaultFormatter": "mads-hartmann.bash-ide-vscode" },
+
+	// python
+	"[python]": {
+		"editor.defaultFormatter": "charliermarsh.ruff",
+		"editor.tabSize": 4,
+		"editor.insertSpaces": false,
+		"editor.detectIndentation": false,
+		"editor.formatOnType": false
+	},
+	"python.analysis.autoIndent": false,
+
+	// markdown
+	"[markdown]": {
+		"editor.insertSpaces": true,
+		"editor.tabSize": 2
+	},
+
+	// DEBUG
+	"debug.focusWindowOnBreak": false,
+	"debug.showInlineBreakpointCandidates": false,
+	"debug.showBreakpointsInOverviewRuler": false,
+	"security.workspace.trust.untrustedFiles": "open",
+
+	// GIT
+	"scm.showActionButton": false,
+	"git.decorations.enabled": true,
+	"git.timeline.showAuthor": false,
+	"git.timeline.showUncommitted": true,
+	"git.showCommitInput": false,
+	"git.useEditorAsCommitInput": false,
+	"git.suggestSmartCommit": false,
+	"git.openRepositoryInParentFolders": "never",
+
+	// quick fix (working?)
+	"editor.codeActionsOnSave": {},
 
 	// LANGUAGES
 
@@ -347,10 +309,29 @@
 	"files.autoSave": "afterDelay",
 
 	// EXPLORER
-	"explorer.openEditors.minVisible": 9,
-	"explorer.openEditors.visible": 9,
+	// sorting
 	"explorer.openEditors.sortOrder": "editorOrder",
 	"explorer.sortOrder": "default",
+
+	// nesting
+	"explorer.fileNesting.patterns": {
+		"*.ts": "${capture}.js",
+		"*.js": "${capture}.js.map, ${capture}.min.js, ${capture}.d.ts",
+		"*.jsx": "${capture}.js",
+		"*.tsx": "${capture}.ts",
+		"tsconfig.json": "tsconfig.*.json",
+		"package.json": "package-lock.json, yarn.lock, pnpm-lock.yaml, bun.lockb",
+		"*.sqlite": "${capture}.${extname}-*",
+		"*.db": "${capture}.${extname}-*",
+		"*.sqlite3": "${capture}.${extname}-*",
+		"*.db3": "${capture}.${extname}-*",
+		"*.sdb": "${capture}.${extname}-*",
+		"*.s3db": "${capture}.${extname}-*"
+	},
+
+	// etc
+	"explorer.openEditors.minVisible": 9,
+	"explorer.openEditors.visible": 9,
 	"explorer.decorations.badges": true,
 	"explorer.decorations.colors": false,
 	"explorer.excludeGitIgnore": true,
@@ -405,7 +386,11 @@
 	// search
 	"editor.find.autoFindInSelection": "multiline",
 
+	// font
+	"editor.fontSize": 13,
+
 	// etc
+	"editor.codeActionsOnSave": {},
 	"editor.lineHeight": 0,
 	"editor.emptySelectionClipboard": false,
 	"editor.colorDecorators": false,
@@ -426,7 +411,6 @@
 	"editor.folding": true,
 	"editor.smoothScrolling": true,
 	"editor.inlineSuggest.enabled": false,
-	"editor.fontSize": 13,
 	"editor.minimap.enabled": false,
 	"editor.showFoldingControls": "never",
 
@@ -438,6 +422,15 @@
 	// settings
 	"extensions.ignoreRecommendations": true,
 	"extensions.autoUpdate": true,
+
+	// Project Manager
+	"projectManager.sortList": "Recent",
+
+	// Partial Diff
+	"partialDiff.commandsOnContextMenu": {
+		"markSection1": false,
+		"markSection2AndTakeDiff": false
+	},
 
 	// Colorize (toggle in keybindings!)
 	"colorize.include": ["**/*.json", "**/*.conf", "**/*.conf", "**/*.md"],
@@ -471,6 +464,15 @@
 
 	// Markdown All In One?
 	"markdown.extension.toc.plaintext": true,
+	"markdown.extension.print.theme": "dark",
+
+	// Markdown Preview Enchanced
+	"markdown-preview-enhanced.mermaidTheme": "dark",
+	"markdown-preview-enhanced.breakOnSingleNewLine": false,
+	"markdown-preview-enhanced.scrollSync": false,
+	"markdown-preview-enhanced.codeBlockTheme": "github-dark.css",
+	"markdown-preview-enhanced.enablePreviewZenMode": true,
+	"markdown-preview-enhanced.previewTheme": "none.css",
 
 	// Audio-preview
 	"workbench.editorAssociations": {
