refactor: better suggestions

--- a/settings.json
+++ b/settings.json
@@ -562,11 +562,11 @@
 	"editor.suggestSelection": "first",
 	"editor.quickSuggestionsDelay": 0,
 	"editor.quickSuggestions": {
-		"other": false,
-		"comments": false,
-		"strings": false
+		"other": "on",
+		"comments": "on",
+		"strings": "on"
 	},
-	"editor.inlineSuggest.suppressSuggestions": true,
+	"editor.inlineSuggest.suppressSuggestions": false,
 	"editor.screenReaderAnnounceInlineSuggestion": false,
 	"editor.acceptSuggestionOnEnter": "on",
 	"editor.wordBasedSuggestions": "matchingDocuments",
