--- a/settings.json
+++ b/settings.json
@@ -364,7 +364,7 @@
 	"editor.formatOnSave": false,
 	"editor.formatOnPaste": true,
 	"editor.formatOnType": true,
-	"editor.detectIndentation": true,
+	"editor.detectIndentation": false,
 	"editor.insertSpaces": false,
 	"editor.tabSize": 4,
 
@@ -428,16 +428,13 @@
 
 	// python
 	"[python]": {
-		"editor.defaultFormatter": "charliermarsh.ruff",
-		"editor.tabSize": 4,
-		"editor.insertSpaces": false,
-		"editor.detectIndentation": false,
-		"editor.formatOnType": false
+		"editor.defaultFormatter": "charliermarsh.ruff"
 	},
 	"python.analysis.autoIndent": false,
 
 	// markdown
 	"[markdown]": {
+		"editor.detectIndentation": true,
 		"editor.insertSpaces": true,
 		"editor.tabSize": 2
 	},
@@ -737,7 +734,6 @@
 
 	// Quick Dim
 	"quickDim.opacity": 0.12,
-	"explorer.excludeGitIgnore": true,
 	"applescript.showNotifications": false,
 	"workbench.activityBar.location": "hidden"
 }
