--- a/settings.json
+++ b/settings.json
@@ -188,7 +188,7 @@
 			{
 				"scope": "markup.bold.markdown",
 				"settings": {
-					"foreground": "#d93677",
+					"foreground": "#049E42",
 					"fontStyle": "bold"
 				}
 			},
@@ -199,122 +199,9 @@
 				}
 			},
 			{
-				"scope": "punctuation.definition.heading.markdown",
+				"scope": "markup.strikethrough.markdown",
 				"settings": {
-					"foreground": "#ffffff55"
-				}
-			},
-			{
-				"scope": "punctuation.definition.bold.markdown",
-				"settings": {
-					"foreground": "#666666"
-				}
-			},
-			{
-				"scope": "punctuation.definition.italic.markdown",
-				"settings": {
-					"foreground": "#666666"
-				}
-			},
-			{
-				"scope": [
-					"string.quoted.single",
-					"string.quoted.double",
-					"string.quoted.multi",
-					"string.quoted.docstring.multi"
-				],
-				"settings": {
-					"foreground": "#6a6e6c"
-				}
-			},
-			{
-				"scope": [
-					"string.quoted.single punctuation.definition.string.begin",
-					"string.quoted.single punctuation.definition.string.end",
-					"string.quoted.double punctuation.definition.string.begin",
-					"string.quoted.double punctuation.definition.string.end",
-					"string.quoted.multi punctuation.definition.string.begin",
-					"string.quoted.multi punctuation.definition.string.end"
-				],
-				"settings": {
-					"foreground": "#404040"
-				}
-			},
-			{
-				"scope": [
-					"punctuation.separator.comma",
-					"punctuation.separator",
-					"punctuation.definition.comment"
-				],
-				"settings": {
-					"foreground": "#555555"
-				}
-			},
-			{
-				"scope": "comment.line",
-				"settings": {
-					"foreground": "#444444",
-					"fontStyle": "italic"
-				}
-			},
-			{
-				"scope": "text.html.markdown",
-				"settings": {
-					"foreground": "#ffffffdd"
-				}
-			},
-			{
-				"scope": "heading.1.markdown",
-				"settings": {
-					"foreground": "#00fbff",
-					"fontStyle": "bold"
-				}
-			},
-			{
-				"scope": "heading.2.markdown",
-				"settings": {
-					"foreground": "#25d0ee",
-					"fontStyle": "bold"
-				}
-			},
-			{
-				"scope": "heading.3.markdown",
-				"settings": {
-					"foreground": "#36a4d3",
-					"fontStyle": "bold"
-				}
-			},
-			{
-				"scope": "heading.4.markdown",
-				"settings": {
-					"foreground": "#3876ae",
-					"fontStyle": "bold"
-				}
-			},
-			{
-				"scope": "heading.5.markdown",
-				"settings": {
-					"foreground": "#2c4380",
-					"fontStyle": "bold"
-				}
-			},
-			{
-				"scope": "heading.6.markdown",
-				"settings": {
-					"fontStyle": "bold"
-				}
-			},
-			{
-				"scope": "markup.bold.markdown",
-				"settings": {
-					"foreground": "#d93677",
-					"fontStyle": "bold"
-				}
-			},
-			{
-				"scope": "markup.italic.markdown",
-				"settings": {
-					"foreground": "#e1a433"
+					"foreground": "#d93677"
 				}
 			},
 			{
