--- a/settings.json
+++ b/settings.json
@@ -6,6 +6,15 @@
 	"window.zoomLevel": 0,
 	"editor.fontFamily": "JetBrainsMono Nerd Font",
 	"terminal.integrated.fontFamily": "JetBrainsMono Nerd Font",
+	"scm.inputFontFamily": "JetBrainsMono Nerd Font",
+	"chat.editor.fontFamily": "JetBrainsMono Nerd Font",
+	"debug.console.fontFamily": "JetBrainsMono Nerd Font",
+	"editor.codeLensFontFamily": "JetBrainsMono Nerd Font",
+	"markdown.preview.fontFamily": "JetBrainsMono Nerd Font",
+	"editor.inlineSuggest.fontFamily": "JetBrainsMono Nerd Font",
+	"editor.inlayHints.fontFamily": "JetBrainsMono Nerd Font",
+	"notebook.markup.fontFamily": "JetBrainsMono Nerd Font",
+
 	"workbench.colorTheme": "Moegi Black",
 	"workbench.iconTheme": "vscode-seedling-icon-theme-plus",
 	
