fix: Exclude additional files from explorer

--- a/settings.json
+++ b/settings.json
@@ -590,27 +590,31 @@
 		"markSection2AndTakeDiff": false
 	},
 
+	// Auto Commit
+	"autoCommit.apiKey": "AIzaSyDvhT49NvzCRhGCrAJkQN5SHb25a4xnFdI",
+	"autoCommit.autoConfirmCommit": true,
+
 	// gitmoji
-	"gitmoji.autoCommit": true,
-	"gitmoji.autoClose": true,
-	"gitmoji.customEmoji": true,
-	"gitmoji.customEmojiMap": [
-		{ "emoji": "🎉", "colon": ":tada:"                  , "text": "begin                                               " },
-		{ "emoji": "✨", "colon": ":sparkles:"              , "text": "feature                                             " },
-		{ "emoji": "♻️", "colon": ":recycle:"               , "text": "refactor                                            " },
-		{ "emoji": "💄", "colon": ":lipstick:"               , "text": "stylize                                            " },
-		{ "emoji": "🩹", "colon": ":adhesive_bandage:"      , "text": "fixy                                                " },
-		{ "emoji": "🐛", "colon": ":bug:"                   , "text": "fix                                                   " },
-		{ "emoji": "🔥", "colon": ":fire:"                  , "text": "delete                                              " },
-		{ "emoji": "🏗️", "colon": ":building_construction:" , "text": "restruct                                            " },
-		{ "emoji": "🥚", "colon": ":egg:" , "text": "                                                       " },
-		{ "emoji": "🙈", "colon": ":see_no_evil:"           , "text": "disable                                             " },
-		{ "emoji": "⏪️", "colon": ":rewind:"                , "text": "revert                                                " },
-		{ "emoji": "✅", "colon": ":white_check_mark:"      , "text": "test                                                 " },
-		{ "emoji": "💡", "colon": ":bulb:"                  , "text": "comment                                           " },
-		{ "emoji": "📝", "colon": ":memo:"                  , "text": "doc                                                    " },
-		{ "emoji": "📦️", "colon": ":package:"               , "text": "configure                                            " }
-	],
+	// "gitmoji.autoCommit": true,
+	// "gitmoji.autoClose": true,
+	// "gitmoji.customEmoji": true,
+	// "gitmoji.customEmojiMap": [
+	// 	{ "emoji": "🎉", "colon": ":tada:"                  , "text": "begin                                               " },
+	// 	{ "emoji": "✨", "colon": ":sparkles:"              , "text": "feature                                             " },
+	// 	{ "emoji": "♻️", "colon": ":recycle:"               , "text": "refactor                                            " },
+	// 	{ "emoji": "💄", "colon": ":lipstick:"               , "text": "stylize                                            " },
+	// 	{ "emoji": "🩹", "colon": ":adhesive_bandage:"      , "text": "fixy                                                " },
+	// 	{ "emoji": "🐛", "colon": ":bug:"                   , "text": "fix                                                   " },
+	// 	{ "emoji": "🔥", "colon": ":fire:"                  , "text": "delete                                              " },
+	// 	{ "emoji": "🏗️", "colon": ":building_construction:" , "text": "restruct                                            " },
+	// 	{ "emoji": "🥚", "colon": ":egg:" , "text": "                                                       " },
+	// 	{ "emoji": "🙈", "colon": ":see_no_evil:"           , "text": "disable                                             " },
+	// 	{ "emoji": "⏪️", "colon": ":rewind:"                , "text": "revert                                                " },
+	// 	{ "emoji": "✅", "colon": ":white_check_mark:"      , "text": "test                                                 " },
+	// 	{ "emoji": "💡", "colon": ":bulb:"                  , "text": "comment                                           " },
+	// 	{ "emoji": "📝", "colon": ":memo:"                  , "text": "doc                                                    " },
+	// 	{ "emoji": "📦️", "colon": ":package:"               , "text": "configure                                            " }
+	// ],
 
 
 	// Colorize (toggle in keybindings!)
